Add Design Club

--- a/index.html
+++ b/index.html
@@ -636,6 +636,64 @@
                 </div>
             </div>
 
+            <h5 class="mt-5 text-center">Design Club</h5>
+            <div class="row df">
+                <div class="col-md-3 my-md-0">
+                    <div class="card wfc mt20">
+                        <div class="card-body tac cunset">
+                            <div class="df">
+                                <div class="tac">
+                                    <img class="team-img" src="assets/imgs/members/design/aleena.png" alt="">
+                                    <h6 class="mt-1 mb-0">Aleena</h6>
+                                </div>
+                            </div>
+                            <p class="text-muted clubname">Club Head</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 my-md-0">
+                    <div class="card wfc mt20">
+                        <div class="card-body tac cunset">
+                            <div class="df">
+                                <div class="tac">
+                                    <img class="team-img" src="assets/imgs/members/design/deepanshu.png" alt="">
+                                    <h6 class="mt-1 mb-0">Deepanshu Dheer</h6>
+                                </div>
+                            </div>
+                            <p class="text-muted clubname">Club Head</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 my-md-0">
+                    <div class="card wfc mt20">
+                        <div class="card-body tac cunset">
+                            <div class="df">
+                                <div class="tac">
+                                    <img class="team-img" src="assets/imgs/members/design/sreerag.png" alt="">
+                                    <h6 class="mt-1 mb-0">Sreerag M</h6>
+                                </div>
+                            </div>
+                            <p class="text-muted clubname">Club Head</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 my-md-0">
+                    <div class="card wfc mt20">
+                        <div class="card-body tac cunset">
+                            <div class="df">
+                                <div class="tac">
+                                    <img class="team-img" src="assets/imgs/members/design/vedika.png" alt="">
+                                    <h6 class="mt-1 mb-0">Vedika Pareek</h6>
+                                </div>
+                            </div>
+                            <p class="text-muted clubname">Club Head</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <h5 class="mt-5 text-center">Web Development</h5>
             <div class="row df">
                 <div class="col-md-3 my-md-0">
@@ -643,7 +701,7 @@
                         <div class="card-body tac cunset">
                             <div class="df">
                                 <div class="tac">
-                                    <img class="team-img" src="assets/imgs/members/web/avinash.png" alt="">
+                                    <img class="team-img" src="assets/imgs/members/web/avinash.jpg" alt="">
                                     <h6 class="mt-1 mb-0">Avinash</h6>
                                 </div>
                             </div>
